--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3",
     "@nextui-org/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^1.3.0",
-    "wagmi": "^1.4.9",
-    "ethers": "^6.9.0"
+    "ethers": "^6.9.0",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "reto": "^0.9.3",
+    "wagmi": "^1.4.9"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
