--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "ethers": "^6.9.0",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
