--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "ethers": "^6.9.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
